--- a/web/src/features/hostdashboard/hostmessages/styles/hostChatScreen.css
+++ b/web/src/features/hostdashboard/hostmessages/styles/hostChatScreen.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-width: 30rem;
+    max-width: 35rem;
     min-height: 30rem;
     max-height: 30rem;
     border-radius: 1rem;
@@ -13,16 +13,75 @@
     padding: 0 0.25rem 0.25rem 0.25rem;
 }
 
+/* 
 .chat-header {
     height: 15%;
+} */
+.host-chat-header {
+    display: flex;
+    padding: 1em;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+    border-bottom: 1px solid #bdbdbd;
+    
+    
+
+
 }
 
+.profile-img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 15px;
+}
+
+.host-chat-header-info {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.host-chat-header-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.host-chat-header-grid p:nth-child(4) {
+    grid-column: span 3;
+    /* Make the 4th item span all 3 columns */
+}
+
+.host-chat-header h3 {
+    padding-left: 0;
+
+}
+
+.host-chat-header-grid p {
+    margin: 0;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+}
+
+.contact-name {
+    font-weight: bold;
+    font-size: 16px;
+    color: #000;
+}
+
+.host-chat-header-grid i {
+    margin-right: 8px;
+    font-size: 14px;
+}
 
 .chat-screen {
     display: flex;
     flex-direction: column-reverse;
     height: 72.5%;
-    overflow-y: auto; 
+    overflow-y: auto;
 }
 
 .chat-screen::-webkit-scrollbar {
@@ -49,6 +108,7 @@
     gap: 0.5rem;
     align-items: center;
 }
+
 .chat-message.received .message-header {
     display: flex;
     flex-direction: row;
@@ -70,6 +130,7 @@
     word-wrap: break-word;
     border-bottom-right-radius: 0;
 }
+
 .chat-message.received {
     display: flex;
     flex-direction: column;
@@ -87,15 +148,18 @@
     word-wrap: break-word;
     border-bottom-left-radius: 0;
 }
+
 .sender-name {
     font-size: 1rem;
     color: black;
 }
+
 .chat-input {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    width: 100%;
     height: 12.5%;
 }
 
@@ -105,6 +169,7 @@
     resize: none;
     border-radius: 1rem;
 }
+
 .message-input-send-button {
     height: 50%;
     width: 15%;
