made the icons container smaller and more responsive

--- a/web/src/pages/home/homePage.css
+++ b/web/src/pages/home/homePage.css
@@ -349,6 +349,10 @@ body.hide-header .app-header {
     padding: 10px 5vw;
   }
 
+  .domits-iconsContainer p {
+    font-size: 1.2rem;
+  }
+
   .domits-communityHead {
     font-size: 1.8rem;
   }
