--- a/web/src/pages/contact/contact.css
+++ b/web/src/pages/contact/contact.css
@@ -10,7 +10,7 @@
   margin-bottom: 50px;
 }
 
-.quistionText{
+.quistionText {
   width: 45vw;
 }
 
@@ -93,7 +93,7 @@
   cursor: pointer;
 }
 
-.Contact-button{
+.Contact-button {
   background-color: var(--primary-color);
   color: white;
   border-radius: 1vh;
@@ -102,7 +102,7 @@
   width: 15vh;
 }
 
-.Contact-button a{
+.Contact-button a {
   text-decoration: none;
 }
 
@@ -111,10 +111,14 @@
   cursor: pointer;
 }
 
-.buttonContactContainer{
+.buttonContactContainer {
   gap: 1%;
   display: flex;
   flex-direction: row;
+}
+
+.buttonContactContainer a {
+  color: white;
 }
 
 .questionsContainer {
@@ -132,29 +136,29 @@
 
 @media screen and (max-width: 930px) {
   .contact {
-      padding: 10px;
-      margin: 10px auto;
-      font-size: 14px;
+    padding: 10px;
+    margin: 10px auto;
+    font-size: 14px;
   }
 
   .contactform {
-      padding: 10px;
+    padding: 10px;
   }
 
   .namemessage,
   .biginput,
   .formbuttons {
-      flex: 100%;
-      width: 100%;
+    flex: 100%;
+    width: 100%;
   }
 
   .biginput textarea {
-      height: 100px;
-      padding: 8px;
-      width: 100%;
+    height: 100px;
+    padding: 8px;
+    width: 100%;
   }
 
   .questionsContainer {
-      width: 100%;
+    width: 100%;
   }
 }
