transforms to .scss

--- a/web/src/features/sustainability/Sustainability.scss
+++ b/web/src/features/sustainability/Sustainability.scss
@@ -1,7 +1,9 @@
+$sustainability-black: #000;
+
 .sustainability {
     width: 90%;
     margin: 40px auto auto;
-    color: #000;
+    color: $sustainability-black;
     font-size: 20px;
     font-style: normal;
 }
