transforms back to .css

--- a/web/src/features/sustainability/Sustainability.css
+++ b/web/src/features/sustainability/Sustainability.css
@@ -1,9 +1,7 @@
-$sustainability-black: #000;
-
 .sustainability {
     width: 90%;
     margin: 40px auto auto;
-    color: $sustainability-black;
+    color: #000;
     font-size: 20px;
     font-style: normal;
 }
