--- a/web/src/features/auth/RegisterModule.css
+++ b/web/src/features/auth/RegisterModule.css
@@ -1,5 +1,5 @@
 .module-registerButton {
-    width: 110%;
+    width: 100%;
     padding: 8px 15px;
     margin-top: 15px;
     background: var(--secondary-color);
@@ -32,7 +32,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: auto;
 }
 
 .module-registerForm {
@@ -50,6 +49,7 @@ label {
 
 .module-registerInput {
     width: 100%;
+    max-width: 200px;
     height: auto;
     padding: 8px 15px;
     margin-top: 5px;
