--- a/web/src/features/auth/Register.css
+++ b/web/src/features/auth/Register.css
@@ -16,6 +16,22 @@
     cursor: pointer;
 }
 
+.react-tel-input .form-control {
+    /* !Important wordt hier gebruikt om de css van de packages te overwriten met deze aanpassingen */
+    width: 110% !important;
+    height: auto !important;
+    margin-top: 5px !important;
+    margin-bottom: 12px !important;
+    background: white !important;
+    box-shadow: none !important;
+    border-radius: 5px !important;
+    border: 1px solid #999 !important;
+    justify-content: flex-start !important;
+    align-items: center !important;
+    display: inline-flex !important;
+    box-sizing: border-box;
+  }
+
 .countryCodeDropdown {
     width: 100%;
     padding: 8px 12px;
