--- a/web/src/features/bookingengine/imagegallery.css
+++ b/web/src/features/bookingengine/imagegallery.css
@@ -1,6 +1,6 @@
 /* imagegallery.css */
 .image-gallery-container {
-  width: 100%;
+  /* width: 100%; */
   max-width: 1000px;
   height: auto;
   max-height: 300px;
@@ -88,14 +88,15 @@
 }
 
 .show-all-button {
+  position: absolute;
   margin-top: 10px;
   padding: 10px 20px;
-  background-color: transparent;
-  border: 2px solid white;
-  border-radius: 5px;
+  backdrop-filter: blur(10px);
+  background: rgba(0, 0, 0, 0.383);
+  border-radius: 15px;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
-  color: black;
+  color: white;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
   align-self: flex-end;
 }
@@ -180,6 +181,19 @@
 @media (min-width: 601px) and (max-width: 1200px) {
   .overlay-thumbnail {
     width: 80%; /* Scale images for medium-sized screens */
+  }
+
+  .selected-image {
+    margin: 0 auto; /* Center the selected image horizontally */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .selected-image img {
+    width: 100%; /* Ensure the image scales properly */
+    max-width: 600px; /* Limit the maximum width */
+    height: auto; /* Maintain aspect ratio */
   }
 }
 
