--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -1,22 +1,14 @@
-/* General Styling */
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-html,
-body {
-    width: 100%;
-    overflow-x: hidden;
-    font-family: Kanit, sans-serif;
-}
-
-/* Header Styling */
+/* CSS for the header */
 .app-header {
     box-shadow: 0 2px 6px 0 #0d1a2626;
     padding: 20px 50px 5px 50px;
     text-align: center;
+}
+
+.trustpilot-bar {
+    display: flex;
+    justify-content: center;
+    margin-top: 2px;
 }
 
 .header-nav {
@@ -28,18 +20,21 @@ body {
 }
 
 .headerRight {
+    float: right;
     display: flex;
     align-items: center;
 }
 
-.headerButtons,
-.personalMenu {
+.headerButtons, .personalMenu {
+    float: left;
     color: black;
     text-align: center;
     padding: 12px;
     font-size: 18px;
     border-radius: 10px;
+    margin-top: 0;
     display: inline-flex;
+    font-family: Kanit, sans-serif;
     cursor: pointer;
     width: auto;
     box-shadow: 0 0 5px hsl(0 0% 78%);
@@ -54,8 +49,7 @@ body {
     display: flex;
 }
 
-.headerHostButton,
-.headerButtons {
+.headerHostButton, .headerButtons {
     border: none;
     background: none;
     box-shadow: none;
@@ -77,7 +71,7 @@ body {
 }
 
 .personalMenuDropdown .personalMenuDropdownContent {
-    padding: 20px 25px;
+    padding: 20px 25px 20px 25px;
     position: absolute;
     background-color: white;
     width: auto;
@@ -99,6 +93,7 @@ body {
     width: 100%;
     color: white;
     font-size: 16px;
+    font-family: Kanit, sans-serif;
     font-weight: 400;
     line-height: 24px;
     word-wrap: break-word;
@@ -113,8 +108,7 @@ body {
     cursor: pointer;
 }
 
-.dropdownRegisterButton,
-.dropdownLogoutButton {
+.dropdownRegisterButton, .dropdownLogoutButton {
     margin-top: 10px;
     background-color: var(--secondary-color);
     border: none;
@@ -156,51 +150,25 @@ body {
 .helloUsername {
     margin-bottom: 10px;
     font-size: 18px;
+    font-family: Kanit, sans-serif;
     font-weight: 400;
     line-height: 24px;
     word-wrap: break-word;
 }
 
-/* Media Queries */
-@media screen and (max-width: 1024px) {
-    .header-nav {
-        flex-wrap: nowrap;
-    }
-
-    .App,
-    .header-nav {
-        position: sticky;
-        top: 0;
-        z-index: 1000;
-        background: white;
-        width: 100%;
-    }
-
-    .logo {
-        margin: 0 1vw 0 -4vw;
-    }
-
-    .headerRight {
-        margin-left: 3vw;
-    }
-
-    .headerButtons.headerHostButton {
-        margin-left: -15%;
-        font-size: 13px;
-    }
-
-    .personalMenu {
-        margin-left: -15%;
-    }
-}
-
 @media screen and (max-width: 768px) {
+    .trustpilot-bar {
+        margin: 0 auto 0 auto;
+        padding-bottom: 10px;
+    }
+    .trustpilot-widget {
+        display: flex;
+        justify-content: center;
+    }
     .logo {
         padding-top: 2vh;
     }
-
-    .header-nav,
-    .headerRight {
+    .header-nav, .headerRight {
         flex-direction: row;
         justify-content: center;
         width: 100%;
@@ -211,9 +179,7 @@ body {
         margin-top: 20px;
     }
 
-    .headerButtons,
-    .personalMenu,
-    .Search-bar {
+    .headerButtons, .personalMenu, .Search-bar {
         width: 100%;
         margin-top: 10px;
         margin-right: 0;
@@ -223,6 +189,18 @@ body {
 
     .app-header {
         padding: 0;
+    }
+
+    .App, .header-nav {
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+        background: white;
+        width: 100%;
+    }
+
+    .header-nav {
+        width: auto;
     }
 
     .headerRight {
@@ -237,7 +215,10 @@ body {
         padding: 10px 20px;
     }
 
-    .SearchBarContainer.inactive,
+    .SearchBarContainer.inactive {
+        display: none;
+    }
+
     .Search-bar.inactive {
         display: none;
     }
@@ -251,31 +232,35 @@ body {
         align-content: center;
         margin: 4vh 0 31vh 4vw;
     }
+
 }
 
-@media screen and (max-width: 480px) {
-
-    .header-nav,
-    .headerRight {
-        flex-direction: column;
-        align-items: center;
+@media screen and (min-width: 769px) and (max-width: 1024px){
+    .header-nav {
+        flex-wrap: nowrap;
     }
-
-    .headerButtons,
-    .personalMenu {
+    .App, .header-nav {
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+        background: white;
         width: 100%;
-        margin-top: 10px;
-        justify-content: center;
     }
-
-    .personalMenuDropdown .personalMenuDropdownContent {
-        width: 90%;
-        left: 5%;
-        right: 5%;
+    .logo {
+        margin: 0 1vw 0 -4vw;
+    }
+    .headerRight {
+        margin-left: 3vw;
+    }
+    .headerButtons.headerHostButton {
+        margin-left: -15%;
+        font-size: 13px;
+    }
+    .personalMenu {
+        margin-left: -15%;
     }
 }
 
-/* Footer Styling */
 .main-footer {
     background-color: #f8f8f8;
 }
@@ -290,7 +275,9 @@ body {
 
 .footer-headers {
     color: var(--primary-color);
+    font-family: Kanit, sans-serif;
     font-size: 24px;
+    font-style: normal;
     font-weight: 400;
     line-height: 150%;
 }
@@ -301,27 +288,25 @@ body {
     overflow: visible;
     white-space: normal;
 }
-
 .footer-lists-socials-icons {
     display: flex;
-    gap: 10px;
-    list-style-type: none;
+    gap: 10px; 
+    list-style-type: none; 
     padding: 0;
 }
 
 .footer-links {
+
     color: #000;
+    font-family: Kanit, sans-serif;
     font-size: 1rem;
+    font-style: normal;
     font-weight: 300;
     line-height: 150%;
 }
 
-.footer-links>a {
-    text-decoration: none;
-    margin-left: 3px;
-}
-
 .footer-copyright {
+
     background-color: var(--primary-color);
     flex-shrink: 0;
     margin-top: auto;
@@ -332,15 +317,17 @@ body {
 }
 
 .footer-icons img {
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 2.5rem; 
+    height:  2.5rem; 
     border-radius: 0.5rem;
     margin: 10px;
 }
 
 .footer-copyright-text {
     color: #fff;
+    font-family: Kanit, sans-serif;
     font-size: 16px;
+    font-style: normal;
     font-weight: 300;
     line-height: 150%;
 }
@@ -365,7 +352,10 @@ body {
     border: 0.5px solid var(--primary-color);
 }
 
-#appstorebadge,
+#appstorebadge {
+    margin-top: 20px;
+}
+
 #playstorebadge {
     margin-top: 20px;
 }
@@ -373,6 +363,7 @@ body {
 .footer-column ul li {
     margin: 10px 0;
     color: var(--colors-font-interactive, #0A760F);
+    font-family: Inter;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
@@ -405,20 +396,18 @@ a:hover {
 }
 
 @media screen and (max-width: 830px) {
+
     .footer-content {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
     }
 
-    .footer-section,
-    .footer-endsection {
+    .footer-section, .footer-endsection {
         margin: 0;
         border-top: 1px solid var(--primary-color);
         margin-bottom: 20px;
-        width: 100%;
-        text-align: center;
+        width: 80%;
     }
 
     .footer-headers {
@@ -429,44 +418,5 @@ a:hover {
         border-right: none;
         padding-right: 0px;
     }
-}
-
-@media screen and (max-width: 480px) {
-    .footer-content {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .footer-section,
-    .footer-endsection {
-        width: 100%;
-        margin-bottom: 10px;
-    }
-
-    .footer-headers {
-        font-size: 20px;
-    }
-
-    .footer-links {
-        font-size: 0.9rem;
-    }
-
-    .footer-icons img {
-        width: 2rem;
-        height: 2rem;
-    }
-
-    .footer-copyright-text {
-        font-size: 14px;
-    }
-
-    .footer-terms {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
-    .footer-terms a {
-        margin: 5px 0;
-    }
+    
 }
