--- a/web/src/features/bookingengine/styles/listing.css
+++ b/web/src/features/bookingengine/styles/listing.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     width: 90%;
-    margin: 5vw; 
+    margin: auto;
     margin-top: 0px;
     margin-bottom: 30px
 }
@@ -307,6 +307,7 @@
     margin-bottom: 15px;
     border-radius: 5px;
     border: 1px solid #ccc;
+    max-width: 100px;
 }
 
 .extraDetails {
@@ -321,6 +322,7 @@
     margin-bottom: 5px;
     color: black;
     font-size: medium;
+    margin-top: 10px;
 }
 
 .price {
@@ -370,7 +372,7 @@
 }
 
 .description {
-    margin-top: 20px;
+    margin: auto;
     font-size: 18px;
     color: #333;
     line-height: 1.5;
@@ -395,6 +397,7 @@
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    margin: auto;
 }
 
 .checkIn, .checkOut {
@@ -601,6 +604,10 @@
 
     .price-item p, .total p {
         margin: 5px 0;
+    }
+
+    .checkInCheckOut {
+        max-width: 300px;
     }
 }
 
